vimode: fix extra newline when using the "Find" action

BUG: 451076